--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
+    --cor-base: #d83619;
+    --cor-de-fundo: #20d7dd;
+    --verde: #f5df16;
     --branco: #FFFFFF;
-    --botao-ativo: #3A375E;
-    --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
-    body {
+    --botao-ativo: #2a1ad4;
+    --botao-inativo: rgba(26, 5, 255, 0.5);
+    --texto-fundo: rgba(21, 0, 255, 0.3);
+   
+   
+body {
         background-color: var(--cor-de-fundo);
         color: var(--branco);
         font-family: 'Chakra Petch', sans-serif;
