--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-base: #d83619;
     --cor-de-fundo: #20d7dd;
     --verde: #f5df16;
-    --branco: #FFFFFF;
+    --branco: #a32121;
     --botao-ativo: #2a1ad4;
     --botao-inativo: rgba(26, 5, 255, 0.5);
     --texto-fundo: rgba(21, 0, 255, 0.3);
