--- a/style.css
+++ b/style.css
@@ -46,5 +46,6 @@ body {
         border-left: 2px solid var(--botao-ativo); 
         border-right: 2px solid var(--botao-ativo); 
         border-top: none;
+    }
                     
     
