--- a/style.css
+++ b/style.css
@@ -47,6 +47,15 @@ body {
         border-right: 2px solid var(--botao-ativo); 
         border-top: none;
     }
+    .botao:first-child{
+        border-radius: 40px 40px 0 0;
+    }
+
+
+
+    .botoes{
+        display:block;
+    }
     @media screen and (min-width: 768px) {
         .botoes {
             display: flex;
