--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #ec29bc88;
     --verde: #f5df16;
     --branco: #000000e1;
-    --botao-ativo: #ffffff;
+    --botao-ativo: #2c0eda;
     --botao-inativo: rgba(255, 5, 234, 0.308);
     --texto-fundo: rgba(0, 0, 0, 0.986);
 }
