--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
         color: var(--verde);
     }
     .botao {
-        font-family: "Crakra Petch", sans-serif;
+        font-family: 'Crakra Petch' , sans-serif;
         background-color: var(--botao-inativo);
         color: var(--branco);
         display: flex;
@@ -54,7 +54,7 @@ body {
 
 
      .botoes{
-        display:block;
+        display: block;
     }
     
     @media screen and (min-width: 768px) {
