--- a/style.css
+++ b/style.css
@@ -1,76 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-base: #1a1a1a;
-    --cor-de-fundo: #ec29bc88;
-    --verde: #f5df16;
-    --branco: #000000e1;
-    --botao-ativo: #2c0eda;
-    --botao-inativo: rgba(255, 5, 234, 0.308);
-    --texto-fundo: rgba(0, 0, 0, 0.986);
+    --cor-de-fundo: #f183ba;
+    --verde: #ff57f1;
+    --branco: #FFFFFF;
+    --botao-ativo: #3A375E;
+    --botao-inativo: rgba(92, 86, 163, 0.5);
+    --texto-fundo: rgb(0, 0, 0);
 }
-   
 body {
-        background-color: var(--cor-de-fundo);
-        color: var(--branco);
-        font-family: 'Chakra Petch', sans-serif;
+    background-color: var(--cor-de-fundo);
+    color: var(--branco);
+    font-family: 'Chakra Petch', sans-serif;
+}
+.conteudo-principal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+.titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}
+
+.titulo-principal span {
+    color: var(--verde);
+}
+.botao {
+    font-family: "Crakra Petch", sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo); 
+    border-left: 2px solid var(--botao-ativo); 
+    border-right: 2px solid var(--botao-ativo); 
+    border-top: none;
     }
-    .conteudo-principal {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        max-width: 1200px;
-        width: 100%;
-        margin: 0 auto;
-    }
-    .titulo-principal {
-        text-align: left;
-        width: 100%;
-        font-size: 32px;
-    }
-    .titulo-principal span {
-        color: var(--verde);
-    }
-    .botao {
-        font-family: 'Crakra Petch' , sans-serif;
-        background-color: var(--botao-inativo);
-        color: var(--branco);
-        display: flex;
-        justify-content: center;
-        padding: 1em;
-        font-size: 18px;
-        align-items: center;
-        width: 100%;
-        border-bottom: 4px solid var(--botao-ativo); 
-        border-left: 2px solid var(--botao-ativo); 
-        border-right: 2px solid var(--botao-ativo); 
-        border-top: none;
-    }
-    .botao:first-child{
+    .botao:first-child {
         border-radius: 40px 40px 0 0;
-    }
-    
-
-
-
-     .botoes{
-        display: block;
-    }
-    
-    @media screen and (min-width: 768px) {
+        }
         .botoes {
-            display: flex;
+            display: block;
         }
-    
-        .botao:first-child {
-            border-radius: 40px 0 0 0;
-        }
-    
-        .botao:last-child {
-            border-radius: 0 40px 0 0;
-        }
-    }
-    
-                    
+        
+        
+        
+        @media screen and (min-width: 768px) {
+            .botoes {
+                display: flex;
+            }
+        
+            .botao:first-child {
+                border-radius: 40px 0 0 0;
+            }
+        
+            .botao:last-child {
+                border-radius: 0 40px 0 0;
+            }
+        }  
     
